Refactor Tag into Impl pattern & Re-enable jcstress-tests (#2952)